# maily

./: .gitignore  .goreleaser.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  go.mod  go.sum  main.go
.claude/: settings.json
.github/workflows/: release-desktop-aarch64.yml  release-desktop-x86_64.yml  release-desktop.yml  release-notify.yml  release.yml
config/: config.go
docs/: ai-chat-plan.md  cache.md  calendar.md  daemon.md  desktop.md  gemini-review-opinions.md  keybindings.md  terminal.md  yahoo-mail.md
docs/bugfix/: bugfix-stale-email-cache.md  email-UTF8.md  github-actions-tauri-signing-key.md  homebrew-upgrade-daemon-stale.md  remove-in-memory-email-cache.md
docs/calendar/: zustand-store.md
docs/features/: apple-notes.md  apple-reminders.md  cache.md  delete-email.md  desktop.md  go-single-process.md  golang-email-sync-strategy.md  multiple-AI-formats.md  search.md  server-client-architecture.md  tauri-email-sync-strategy.md  tauri-reminders.md  tokio.md  yahoo-mail.md
docs/tauri/: email-tags.md
internal/ai/: client.go  prompts.go
internal/auth/: credentials.go  oauth.go
internal/cache/: cache.go  cache_test.go
internal/calendar/: eventkit_darwin.go  eventkit_darwin.m  stub_other.go
internal/cli/: accounts.go  calendar.go  config.go  config_tui.go  daemon.go  daemon_test.go  login.go  logout.go  root.go  search.go  selector.go  server_cmd.go  sync_cmd.go  today.go  update.go  update_test.go
internal/client/: client.go
internal/gmail/: client.go  imap.go  search.go  smtp.go
internal/i18n/: embed.go  i18n.go
internal/i18n/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  nl.yml  pl.yml  pt-BR.yml  ru.yml  zh-Hans.yml  zh-Hant.yml
internal/mail/: imap.go  search.go  smtp.go
internal/notify/: notify.go
internal/proc/: proc.go
internal/server/: memory.go  protocol.go  server.go  state.go
internal/sync/: sync.go  sync_test.go
internal/ui/: app.go  calendar.go  calendar_form_views.go  calendar_nlp_views.go  calendar_views.go  commands.go  compose.go  login.go  provider_selector.go  search.go  styles.go  today.go
internal/ui/components/: commandpalette.go  datepicker.go  filepicker.go  labelpicker.go  maillist.go  render.go  timepicker.go  views.go
internal/ui/utils/: helpers.go
internal/updater/: updater.go
internal/version/: version.go
tauri/: LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri/src/: index.css  main.tsx  routeTree.gen.ts
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: ai.rs  config.rs  imap_queue.rs  lib.rs  mail.rs  smtp.rs
tauri/src-tauri/src/calendar/: eventkit.m  mod.rs
tauri/src-tauri/src/reminders/: mod.rs
tauri/src/components/: UpdateNotification.tsx
tauri/src/components/chat/: AIChat.tsx
tauri/src/components/compose/: Compose.tsx
tauri/src/components/home/: AccountRail.tsx  EmailList.tsx  EmailListContent.tsx  EmailReader.tsx  Home.tsx  IsolatedHtml.tsx  MailboxNav.tsx  index.ts
tauri/src/components/settings/: AIProvidersSettings.tsx  AccountsSettings.tsx  GeneralSettings.tsx  (+6 more)
tauri/src/hooks/: useUpdater.ts
tauri/src/lib/: tags.ts
tauri/src/routes/: __root.tsx  calendar.tsx  email.$account.$mailbox.$uid.tsx  index.tsx  settings.tsx
tauri/src/stores/: accounts.ts  chatStore.ts  emailCache.ts
tauri/src/types/: account.ts  config.ts  tags.ts
(+166 files in other folders)
