[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
imap = "2"
native-tls = "0.2"
mailparse = "0.15"
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.12"
ammonia = "4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "builder"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
async-openai = "0.27"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# macOS native framework bindings
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
block = "0.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

