[package]
name = "tauri"
version = "0.1.36"
description = "Maily Desktop - A handy email client app, and more"
authors = ["Yumin Gui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
imap = "2"
imap-proto = "0.10"
native-tls = "0.2"
mailparse = "0.15"
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.12"
ammonia = "4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "builder"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2.5.6"

# macOS native framework bindings (objc2 ecosystem)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSCalendar", "NSString", "NSArray", "NSError", "NSDictionary", "NSThread"] }
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKEvent", "EKCalendar", "EKReminder", "EKAlarm", "EKSource", "EKCalendarItem", "EKTypes", "EKObject"] }
block2 = "0.6"
dispatch2 = "0.2"

